# kyon_mjlab

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile  bake.hcl  build.bash  compose.yaml
src/kyon_mjlab/: __init__.py
src/kyon_mjlab/assets/robots/kyon/: kyon_config.py
src/kyon_mjlab/assets/utils/: urdf_utils.py
src/kyon_mjlab/scripts/: play.py  play_kyon_flat.bash  replicate_repository_from_wandb.py  train.py  train_kyon_flat.bash
src/kyon_mjlab/tasks/velocity/: velocity_env_cfg.py
src/kyon_mjlab/tasks/velocity/config/kyon/: __init__.py  flat_env_cfg.py  rl_cfg.py  rough_env_cfg.py
src/kyon_mjlab/tasks/velocity/mdp/: observations.py
